# mementor

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: activeContext.md  progress.md  structure.md  techContext.md
docs/archives/2025/: snapshot_20250207_092804.md
docs/mementor_docs/: CONFIGURATION.md  USAGE.md  activeContext.md  productbrief.md  progress.md  systemPatterns.md  techContext.md
docs/mementor_docs/archives/2025/: snapshot_20250207_093444.md  snapshot_20250207_100314.md  snapshot_20250207_100725.md  snapshot_20250207_101030.md  snapshot_20250207_101551.md  snapshot_20250207_102100.md  snapshot_20250207_102833.md  snapshot_20250207_103011.md  snapshot_20250207_103353.md
memory_system_init/: templates.py
scripts/: generate_docs.py  generate_snapshot.py
scripts/hooks/: pre_commit.py
templates/: active_context.mustache  snapshot.mustache
