[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mementor"
version = "0.1.0"
description = "Documentation memory system for AI driven projects"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["documentation", "memory-management", "project-setup", "ai-documentation"]
authors = [
    { name = "Zeljko Prsa", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0.0",
    "rich>=10.0.0",
    "python-crontab>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.900",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/zeljkoprsa/mementor"
Documentation = "https://github.com/zeljkoprsa/mementor#readme"
Repository = "https://github.com/zeljkoprsa/mementor.git"
Issues = "https://github.com/zeljkoprsa/mementor/issues"

[project.scripts]
mementor = "mementor.cli:main"

[tool.black]
line-length = 88
target-version = ["py38"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"
multi_line_output = 3
